# storm-forecasting-convlstm

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release-package.yml
configs/: base.yaml
configs/data/: vil_12in_12out.yaml
configs/experiments/: baseline_desktop.yaml  baseline_reproduction.yaml  uncertainty_mc_dropout.yaml  weighted_mae_eval.yaml
configs/model/: convlstm_unet.yaml
data/: README.md
docs/: methodology.md
notebooks/: 01_eda.ipynb  02_error_analysis.ipynb  03_qualitative_results.ipynb
scripts/: bootstrap_data.sh  evaluate_baseline.sh  run_uncertainty.sh  train_baseline.sh
src/storm_forecasting/: __init__.py  config.py  paths.py  seed.py
src/storm_forecasting/cli/: evaluate.py  make_dataset_index.py  predict.py  train.py
src/storm_forecasting/data/: __init__.py  dataset.py  io.py  splits.py  transforms.py  windowing.py
src/storm_forecasting/evaluation/: __init__.py  horizon_metrics.py  metrics.py  qualitative.py  uncertainty.py
src/storm_forecasting/models/: __init__.py  blocks.py  convlstm.py  seq2seq_unet.py
src/storm_forecasting/training/: __init__.py  checkpoints.py  engine.py  losses.py  optim.py
src/storm_forecasting/utils/: device.py  logging.py
src/storm_forecasting_convlstm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_dataset_shapes.py  test_metrics.py  test_model_forward.py  test_splits.py  test_windowing.py
